# pdf-to-word-backend

./: README.md  pyproject.toml  vercel.json
api/: main.py  pdf_text_filter.py  pdf_to_word.py
